src/snapshots/afrotd__parser__tests__rule_html_2.16.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.16.8 Return Kick
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Return Kick ist ein Kick durch einen Spieler des Teams in
                Ballbesitz, nach dem Wechsel des Team Ballbesitzes während
                eines Downs. Er ist ein illegaler Kick und ein Live Ball Foul,
                durch das der Ball dead wird (Regel 6.3.10.b).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.16.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
