src/snapshots/afrotd__parser__tests__rule_html_2.19.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.19.1 Passen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Passen bedeutet den Ball werfen. Ein Pass bleibt solange ein
                Pass, bis er durch einen Spieler gefangen oder abgefangen oder
                dead wird.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.19.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
