src/snapshots/afrotd__parser__tests__rule_html_2.2.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.2.1 Live Ball
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Live Ball ist ein Ball im Spiel. Ein Pass, Kick oder
                Fumble, bei dem der Ball noch nicht den Boden berührt hat, ist
                ein Live Ball im Flug.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.2.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
